# Multithreaded-News-System

./: BoundedQueue.c  BoundedQueue.h  CMakeLists.txt  CoEditor.c  CoEditor.h  ControlAndData.c  ControlAndData.h  Dispatcher.c  Dispatcher.h  Producer.c  Producer.h  README.md  ScreenManager.c  ScreenManager.h  UnBoundedQueue.c  UnBoundedQueue.h  conf.txt  conf1.txt  main.c  makefile
BoundedQueue/: BoundedQueue.c  BoundedQueue.h
CoEditor/: CoEditor.c  CoEditor.h
ControlAndData/: ControlAndData.c  ControlAndData.h
Dispatcher/: Dispatcher.c  Dispatcher.h
Producer/: Producer.c  Producer.h
ScreenManager/: ScreenManager.c  ScreenManager.h
UnboundedQueue/: UnBoundedQueue.c  UnBoundedQueue.h
